--- a/ders/variants.html
+++ b/ders/variants.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <meta charset="UTF-8">
 <meta name="viewport"    content="width=device-width">
-<meta name="author"      content="M A Eyler, Istanbul, 2024" />
-<meta name="description" content="The oldest sheets of Quran" />
+<meta name="author"      content="M A Eyler, Istanbul, 2025" />
+<meta name="description" content="Variant readings in the Quran" />
 <link rel="stylesheet" href="ders.css" media="all">
 <link rel="stylesheet" href="variants.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
@@ -24,7 +24,7 @@
 
 <h3 id="number">Number of variants</h3>
 <p>In <i>Iqra</i>, <a href="list.html">nearly 1200 words</a> are marked as having variant readings. About three-quarters of these variations are related to the vowels alone, without any consonant change. In the <a href="harf.html">remaining 320 words</a>, consonantal changes are permitted, but these variations are minimal: almost all involve a single-letter modification, whether through addition, removal, or substitution. </p>
-<p>All differences extending beyond a single letter, the variation is strictly limited to two letters: a couple added, a couple removed, or a couple replaced by two other letters. Notably, no variant reading alters more than two letters, underscoring the controlled nature of these differences. <b>All words</b> with a two-letter variation are shown below:</p>
+<p>As to the differences extending beyond a single letter, the variation is strictly limited to two letters: a couple added, a couple removed, or a couple replaced by two other letters. Notably, no variant reading alters more than two letters, underscoring the controlled nature of these differences. <b>All words</b> with a two-letter variation are shown below:</p>
 <table id="tablo1"><tbody>
   <tr><th>Verse<th>Standard<th>Reader<th>Variant<th>Remove<th>Add
   <tr>
@@ -58,16 +58,16 @@
     <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/49/verse/6/variants">fa-taṯabbatū</a>
     <td class="yellow">(byn)<td>(ṯbt)
 </tbody></table>
-<p>Pink and Yellow colors denote <span class=pink>Spelling change</span> and <span class=yellow>Root change</span>, respectively. All of the variant readings are listed in the link before the table.</p>
+<p>Pink denotes <span class=pink>Spelling change</span> and yellow denotes <span class=yellow>Root change</span>. The link for the complete list of variant readings is given above, before the table.</p>
 <p>The numbers clearly refute both of the following claims:</p>
-<p>• <b>Claim by some Muslims</b>: <i>"Variant readings are merely differences in regional pronunciation."</i> This is incorrect. While phonetic variations constitue the majority, at least 1,000 words (including repetitions) exhibit slight differences in meaning across various readings.</p>
-<p>• <b>Claim by some non-Muslims</b>: <i>"There are numerous instances of omitted and inserted words, even entire verses."</i> In reality, within the domain of <i>valid recitations</i>, both verse order and word order remain fixed. The only case of word addition involves a two-letter word (<b>min</b>) and the single instance of removal is another two-letter word (<b>huwa</b>), as noted in the list of two-letter variations above. There is no instance of verse order or word order being altered within <i>valid recitations</i>.</p>
+<p>• <b>Claim by some Muslims</b>: <i>"Variant readings are merely differences in regional pronunciation."</i> This is incorrect. While phonetic variations constitue the majority, approximately 1000 words (including repetitions) exhibit slight differences in meaning across various readings.</p>
+<p>• <b>Claim by some non-Muslims</b>: <i>"There are numerous instances of omitted and inserted words, even entire verses."</i> In reality, within the domain of <i>valid recitations</i>, both verse order and word order remain fixed. The only case of word addition involves a two-letter word (<b>min</b>) and the single instance of removal is another two-letter word (<b>huwa</b>), as shown in the table above. There is no instance of verse order or word order being altered within <i>valid recitations</i>.</p>
 <br>
 
 <h2 id="sample">Classification and examples</h2>
-<p>Some orientalists have attempted to portray the variations as textual corruption. However, Islamic scholars assert that these readings were divinely revealed and that the Prophet recited both at different times. It is inconceivable that the companions, who meticulously preserved the Quran, would have overlooked the difference between "malik" and "mâlik". Since both readings have been conveyed through mass transmission (<i>tawātur</i>), both meanings are equally valid and part of the Quranic revelation.</p>
-<p>There are only a small number of valid recitations that go all the way back to the companions with a chain of narration (<i>isnâd</i>). For a recitation to be valid, both verbal and written evidence is required: a solid chain of narration and conformity with one of the written codices (<i>mushaf</i>). Anyone who claims "That word can also be read like this" is bound by the two rules: The claimer must have valid <i>isnâd</i> and the reading must conform to an accepted <i>mushaf</i>.</p>
-<p>Al-Dānī described seven canonical recitations in his book <b>al-Taysīr</b>. Each recitation is associated with a region and a reader representing the variant reading. The seven readers (called <i>qâri</i>) are given below, along with the region they lived and the hijri year of death.
+<p>Some orientalists have attempted to portray the variations as textual corruption. However, Islamic scholars assert that these readings were divinely revealed and that the Prophet recited both at different times. It is inconceivable that the companions, who meticulously preserved the Quran, would have overlooked the difference between "malik" and "mâlik". Since both readings have been conveyed through mass transmission (<i>tawātur</i>), both meanings are equally acceptable and part of the Quranic revelation.</p>
+<p>There are only a small number of valid recitations that go all the way back to the companions with a chain of narration (<i>isnâd</i>). For a recitation to be valid, both verbal and written evidence is required: a solid chain of narration and conformity with an acceptable codex (<i>mushaf</i>). Anyone who claims "That word can also be read like this" is bound by the two rules: The claimer must have an authentic <i>isnâd</i> and the reading must conform to an Uthmani <i>mushaf</i>.</p>
+<p>Al-Dānī described seven canonical recitations in his book <b>al-Taysīr</b>. Each recitation is associated with a region and a reader representing the variant. The seven readers (<i>qâri</i>) are listed below, along with the region where they lived and the hijri year of death.
 <pre>  Region -- Reader  (death)
 1 Medina -- Nāfi`     (169)
 2 Mecca  -- Ibn Kaṯīr (120)
@@ -77,7 +77,7 @@
 6 Kufa   -- Ḥamzah    (156)
 7 Kufa   -- al-Kisāī  (189)
 </pre>
-<p>Variant readings can be classified into five groups. You will find below for each group, a list of words, approximate number, and a sample word from the list:</p>
+<p>Variant readings can be classified into five groups. You will find below for each group, a list of words, approximate number of words, and a sample word from each list:</p>
 <ol>
 <li>Pronunciation variants -- not counted
 <li><a href="hareke.html">Vowelization variants</a> -- 870 words
@@ -88,7 +88,7 @@
     (<span class=pink>pink</span>) -- 45 words
 </ol>
 
-<p>In each example below, if you click on the verse number, the verse will be displayed in the <i>Iqra</i> software. When you click on the word, variant readings of the verse are opened on the <i>Corpus Coranicum</i> website. Below the yellow line you can see the standard Asim/Hafs narration, and above the line the accepted variant readings are shown.
+<p>In each example below, if you click on the verse number, the verse will be displayed in the <i>Iqra</i> software. When you click on the word, variant readings of the verse are opened on the <i>Corpus Coranicum</i> website. Below the yellow line you can see the standard Asim/Hafs narration, and above the line the variant readings are shown.
 </p>
 
 <h3>1. Pronunciation variants</h3>
@@ -96,7 +96,7 @@
 <p>Nāziʿāt <a name="v=79:15&b=muwsaY%60^">79:15</a> &mdash;
 <b>Mūsā</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mūsæ | Mūsē</a>
     <img src="img/Naziat 15.png">
-    In this verse, the word "Mūsā" readable in three different ways, depending on the local accent. There are many similar examples: "hudâ", "hawâ", "tajallâ" and similar words are written with the dotless "ya"  instead of the alif, to allow for different readings. Similarly, there are qâris who read the words "nâr" and "kâfirûn" as "niyr" and "kiyfirûn"! At first hearing, they sound very different, but different accents really add richness to the sound.
+    In this verse, the word "Mūsā" readable in three different ways, depending on the local accent. There are many similar examples: "hudâ", "hawâ", "tajallâ" and similar words are written with the dotless "ya"  instead of the alif, to allow for different readings. Similarly, there are qâris who read the words "nâr" and "kâfirûn" as "niyr" and "kiyfirûn"! At first hearing, they sound a bit annoying, but different accents really add richness to the sound.
 </p>
 
 <h3>2. Vowelization variants</h3>
@@ -112,11 +112,11 @@
 <p>Hijr <a name="v=15:8&r=nzl">15:8</a> &mdash;
     <b>nunazzilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tanazzalu | tunazzalu</a>
     <img src="img/Hicr 8.png">
-    While the readers of Kufa read this verse as meaning "we send down" the angels, others say "the angels descend." The mood is different but the net meaning is the same.
+    While the readers of Kufa read this verse as meaning "we send down the angels," others say "the angels descend." The subject is different but the net meaning is the same.
 </p>
 
 <h3>4. Different root</h3>
-<p>In 14 verses, two words with different meanings have the same spelling. Both meanings are valid together and they enrich the meaning. Since one is not considered "more correct" than the other, both are preserved in memory, but are depicted in the same way in the Uthmani mushafs.</p>
+<p>In 14 verses, two words with different meanings have the same spelling. Both meanings are valid together and they enrich the meaning. Since one is not considered "more correct" than the other, both are preserved in memory, but were depicted in the same way in the Uthmani mushafs.</p>
 <p>ʿAnkabūt <a name="v=29:58&r=bwA">29:58</a> &mdash;
     <b>nubawwiʾanna</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants" target=Kuran>nuṯwiyanna</a>
     <img src="img/Ankebut 58.png">
@@ -128,15 +128,16 @@
 <p>Yūnus <a target=iqra name="v=10:22&r=syr">10:22</a> &mdash;
     <b>yusayyirukum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yanšurukum</a> 
     <img src="img/Yunus 22.png">
-    Ibn ʿĀmir alone read this verse with a different word that is very similar in meaning. The root sin-ya-ra, which is the choice of the majority, means "to roam on the earth", while the root nun-šin-ra means "to spread". The difference is not easily seen in Kufic script.
+    Ibn ʿĀmir alone read this verse with a different word that is very similar in meaning. The root sin-ya-ra, which is the choice of the majority, means "to roam" on the earth, while the root nun-šin-ra means "to spread". The difference is not easily seen in Kufic script.
 </p>
 
 <h3 id="source">Sources</h3>
-<p>Three centuries after the Hijra, in the 900s, an important classification was carried out in Baghdad, the center of the Abbasid Islamic state, regarding variant readings of the Quran: Ibn Mujahid compiled the readings of seven readers chosen from five regions (Medina, Mecca, Basra, Damascus, Kufa) and wrote his work called <b>Kitāb al-Sabʿah fī al-Qirāʾāt</b> (Seven Recitations). A century later, in Andalusia, Abu ʿAmr al-Dani simplified the seven readings in his famous book <b>al-Taysīr</b>. </p>
-<p>In 1930, this work was republished in Istanbul by the German orientalist Otto Pretzl. About a century later, van Putten from Holland translated the same book into English and made it available for general use, adding some preliminary information. The tables found from the links on this page were extracted from van Putten's valuable work.</p>
+<p>Three hundred years after the Hijra, in the 900s, an important classification was carried out in Baghdad, the center of the Abbasid Islamic state, regarding variant readings of the Quran: Ibn Mujahid compiled the readings of seven readers chosen from five regions (Medina, Mecca, Basra, Damascus, Kufa) and wrote his work called <b>Kitāb al-Sabʿah fī al-Qirāʾāt</b> (Seven Recitations). A century later, in Andalusia, Abu ʿAmr al-Dani simplified the seven readings in his famous book <b>al-Taysīr</b>. </p>
+<p>In 1930, the German orientalist O Pretzl republished this work in Istanbul. Again a century later, Dutch scholar M van Putten translated the same book into English, making it widely accessible and supplementing it with introductory insights. The tables linked on this page have been extracted from van Putten's valuable contribution.</p>
 
 <h3>Conclusion</h3>
 <p>Institutions and scholars worldwide engage in preserving and teaching these recitations, ensuring the Quran's multifaceted oral heritage remains alive. The variant readings of the Quran exemplify the linguistic richness of the text and the meticulous efforts of generations to preserve its oral and written forms. These variations, far from indicating discrepancies, highlight adaptability of the Quran, offering multiple layers of understanding and reflection.</p>
+<p>The claim that "not even a single letter has changed" reflects a lack of awareness of variant readings. In reality, the preservation of the Quran is much stronger than that: <i>The Quran has been preserved in its entirety, including all its variant readings</i>. There is no alteration in the order of surahs, verses, or even words. While some words exhibit differences in vowels, or in 320 cases consonants, these variations are accurately preserved. Recitational differences are safeguarded through oral transmission, while spelling variations are recorded in the Uthmani mushafs.</p>
 <p><a href="list.html">Complete list of the variants</a></p>
 <br>
 <p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
