--- a/ders/variants.html
+++ b/ders/variants.html
@@ -13,14 +13,14 @@
 
 <p>The Quran is well-known for its rich oral tradition and the diversity of its recitations, known as <i>qira'at</i>. The variant readings have been a subject of extensive study, reflecting both linguistic nuances and the depth of the Quranic text. The Quran is not a single text, but rather it is multifaceted and contains numerous words with different readings. These differences arise primarily for two main reasons:</p>
 <ul>
-    <li><b>Phonetic variations</b>: Different readings are permitted to accommodate variations in various dialects of Arabic, enriching the oral recitation of the Quran. For example, in Surah Ad-Duha, some readers pronounce the word as "ḍuḥā", while others read it as "ḍuḥæ" or "ḍuḥē".</li>
+    <li><b>Phonetic variations</b>: Different readings are permitted to accommodate variations in different dialects of Arabic, enriching the oral recitation of the Quran. For example, in Surah ad-Duha, some readers pronounce the word as "ḍuḥā", while others read it as "ḍuḥæ" or "ḍuḥē".</li>
     <li><b>Semantic richness</b>: When differences in reading affect meaning, both interpretations are considered correct, adding depth to the Quranic message. For instance, a word in Surah al-Fatiha (Q1:4) is readable both as "malik" (king) and "mālik" (owner), conveying complementary aspects of the divine authority.</li>
 </ul>
 
 <h3>Variants in <i>Iqra</i> software</h3>
 <p>The word "mālik" (Q1:4) mentioned above is shown in color in <i>Iqra</i>, indicating the existence of a variant reading:</p>
 <p><img width="377" src="./img/Fatihah 4.jpg"></p>
-<p>The standard reading and its variant are depicted in the panel shown above. Five readers used here a short "a", and two readers read the same word with a long "ā".</p>
+<p>The standard reading and its variant are depicted in the panel shown above. Five readers used a short "a" here, and two readers read the same word with a long "ā".</p>
 
 <h3 id="number">Number of variants</h3>
 <p>In <i>Iqra</i>, <a href="list.html">nearly 1200 words</a> are marked as having variant readings. About three-quarters of these variations are related to the vowels alone, without any consonant change. In the <a href="harf.html">remaining 320 words</a>, consonantal changes are permitted, but these variations are minimal: almost all involve a single-letter modification, whether through addition, removal, or substitution. </p>
@@ -58,15 +58,15 @@
     <td><a target="Kuran" href="https://corpuscoranicum.org/en/verse-navigator/sura/49/verse/6/variants">fa-taṯabbatū</a>
     <td class="yellow">(byn)<td>(ṯbt)
 </tbody></table>
-<p>Pink denotes <span class=pink>Spelling change</span> and yellow denotes <span class=yellow>Root change</span>. The link for the complete list of variant readings is given above, before the table.</p>
+<p>Pink denotes a <span class=pink>spelling change</span> and yellow denotes a <span class=yellow>root change</span>. The link for the complete list of variant readings is given above, before the table.</p>
 <p>The numbers clearly refute both of the following claims:</p>
-<p>• <b>Claim by some Muslims</b>: <i>"Variant readings are merely differences in regional pronunciation."</i> This is incorrect. While phonetic variations constitue the majority, approximately 1000 words (including repetitions) exhibit slight differences in meaning across various readings.</p>
-<p>• <b>Claim by some non-Muslims</b>: <i>"There are numerous instances of omitted and inserted words, even entire verses."</i> In reality, within the domain of <i>valid recitations</i>, both verse order and word order remain fixed. The only case of word addition involves a two-letter word (<b>min</b>) and the single instance of removal is another two-letter word (<b>huwa</b>), as shown in the table above. There is no instance of verse order or word order being altered within <i>valid recitations</i>.</p>
+<p>• <b>Claim by some Muslims</b>: <i>"Variant readings are merely differences in regional pronunciation."</i> This is incorrect. While phonetic variations constitute the majority of cases, approximately 1000 words (including repetitions) exhibit slight differences in meaning across various readings.</p>
+<p>• <b>Claim by some non-Muslims</b>: <i>"There are numerous instances of omitted and inserted words, even entire verses."</i> In reality, within the domain of <i>valid recitations</i>, both verse order and word order remain fixed. The only case of word addition involves a two-letter word (<b>min</b>) and the single instance of removal is another two-letter word (<b>huwa</b>), as shown in the table above. There is no instance of the verse order or the word order being altered within <i>valid recitations</i>.</p>
 <br>
 
 <h2 id="sample">Classification and examples</h2>
 <p>Some orientalists have attempted to portray the variations as textual corruption. However, Islamic scholars assert that these readings were divinely revealed and that the Prophet recited both at different times. It is inconceivable that the companions, who meticulously preserved the Quran, would have overlooked the difference between "malik" and "mâlik". Since both readings have been conveyed through mass transmission (<i>tawātur</i>), both meanings are equally acceptable and part of the Quranic revelation.</p>
-<p>There are only a small number of valid recitations that go all the way back to the companions with a chain of narration (<i>isnâd</i>). For a recitation to be valid, both verbal and written evidence is required: a solid chain of narration and conformity with an acceptable codex (<i>mushaf</i>). Anyone who claims "That word can also be read like this" is bound by the two rules: The claimer must have an authentic <i>isnâd</i> and the reading must conform to an Uthmani <i>mushaf</i>.</p>
+<p>There are only a small number of valid recitations that go all the way back to the companions with a chain of narration (<i>isnâd</i>). For a recitation to be valid, both verbal and written evidence is required: a solid chain of narration and conformity with an acceptable codex (<i>mushaf</i>). Anyone who claims "That word can also be read like this" is bound by the two rules: The claimer must have an authentic <i>isnâd</i> and the reading must conform to an Uthmani <i>mushaf</i>, established under the reign of the third caliph.</p>
 <p>Al-Dānī described seven canonical recitations in his book <b>al-Taysīr</b>. Each recitation is associated with a region and a reader representing the variant. The seven readers (<i>qâri</i>) are listed below, along with the region where they lived and the hijri year of death.
 <pre>  Region -- Reader  (death)
 1 Medina -- Nāfi`     (169)
@@ -96,7 +96,7 @@
 <p>Nāziʿāt <a name="v=79:15&b=muwsaY%60^">79:15</a> &mdash;
 <b>Mūsā</b> ⇒ <a href="https://corpuscoranicum.org/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mūsæ | Mūsē</a>
     <img src="img/Naziat 15.png">
-    In this verse, the word "Mūsā" readable in three different ways, depending on the local accent. There are many similar examples: "hudâ", "hawâ", "tajallâ" and similar words are written with the dotless "ya"  instead of the alif, to allow for different readings. Similarly, there are qâris who read the words "nâr" and "kâfirûn" as "niyr" and "kiyfirûn"! At first hearing, they sound a bit annoying, but different accents really add richness to the sound.
+    In this verse, the word "Mūsā" is readable in three different ways, depending on the local accent. There are many similar examples: "hudâ", "hawâ", "tajallâ" and similar words are written with the dotless "ya"  instead of the alif, to allow for different readings. Similarly, there are qâris who read the words "nâr" and "kâfirûn" as "niyr" and "kiyfirûn"! At first hearing, they sound a bit annoying, but different accents really add richness to the sound.
 </p>
 
 <h3>2. Vowelization variants</h3>
@@ -112,7 +112,7 @@
 <p>Hijr <a name="v=15:8&r=nzl">15:8</a> &mdash;
     <b>nunazzilu</b> ⇒ <a href="https://corpuscoranicum.org/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tanazzalu | tunazzalu</a>
     <img src="img/Hicr 8.png">
-    While the readers of Kufa read this verse as meaning "we send down the angels," others say "the angels descend." The subject is different but the net meaning is the same.
+    While the readers of Kufa read this verse as meaning "we send down the angels," others say "the angels descend." The subject is different, but the net meaning is the same.
 </p>
 
 <h3>4. Different root</h3>
@@ -132,11 +132,11 @@
 </p>
 
 <h3 id="source">Sources</h3>
-<p>Three hundred years after the Hijra, in the 900s, an important classification was carried out in Baghdad, the center of the Abbasid Islamic state, regarding variant readings of the Quran: Ibn Mujahid compiled the readings of seven readers chosen from five regions (Medina, Mecca, Basra, Damascus, Kufa) and wrote his work called <b>Kitāb al-Sabʿah fī al-Qirāʾāt</b> (Seven Recitations). A century later, in Andalusia, Abu ʿAmr al-Dani simplified the seven readings in his famous book <b>al-Taysīr</b>. </p>
-<p>In 1930, the German orientalist O Pretzl republished this work in Istanbul. Again a century later, Dutch scholar M van Putten translated the same book into English, making it widely accessible and supplementing it with introductory insights. The tables linked on this page have been extracted from van Putten's valuable contribution.</p>
+<p>Three hundred years after the Hijra, in the 900s, an important classification was carried out in Baghdad, the center of the Abbasid Islamic state, regarding variant readings of the Quran: Ibn Mujahid compiled the readings of seven readers chosen from five regions (Medina, Mecca, Basra, Damascus, Kufa) and wrote his work <b>Kitāb al-Sabʿah fī al-Qirāʾāt</b> (Seven Recitations). A century later, in Andalusia, Abu ʿAmr al-Dani simplified the seven readings in his famous book <b>al-Taysīr</b>. </p>
+<p>In 1930, the German orientalist Otto Pretzl republished this work in Istanbul. Again a century later, Dutch scholar M van Putten translated the same book into English, making it widely accessible and supplementing it with introductory insights. The tables linked on this page have been extracted from van Putten's valuable contribution.</p>
 
 <h3>Conclusion</h3>
-<p>Institutions and scholars worldwide engage in preserving and teaching these recitations, ensuring the Quran's multifaceted oral heritage remains alive. The variant readings of the Quran exemplify the linguistic richness of the text and the meticulous efforts of generations to preserve its oral and written forms. These variations, far from indicating discrepancies, highlight adaptability of the Quran, offering multiple layers of understanding and reflection.</p>
+<p>Institutions and scholars worldwide engage in preserving and teaching these recitations, ensuring the Quran's multifaceted oral heritage remains alive. The variant readings of the Quran exemplify the linguistic richness of the text and the meticulous efforts of generations to preserve its oral and written forms. These variations, far from indicating discrepancies, highlight the adaptability of the Quran, offering multiple layers of understanding and reflection.</p>
 <p>The claim that "not even a single letter has changed" reflects a lack of awareness of variant readings. In reality, the preservation of the Quran is much stronger than that: <i>The Quran has been preserved in its entirety, including all its variant readings</i>. There is no alteration in the order of surahs, verses, or even words. While some words exhibit differences in vowels, or in 320 cases consonants, these variations are accurately preserved. Recitational differences are safeguarded through oral transmission, while spelling variations are recorded in the Uthmani mushafs.</p>
 <p><a href="list.html">Complete list of the variants</a></p>
 <br>
