--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -121,7 +121,7 @@ src="https://www.youtube.com/embed/hy6eG30mn6o?si=bl2SM5Pv5LeNfnbe" title="YouTu
 <p>Yunus <a target=iqra name="v=10:22&r=syr">10:22</a> &mdash;
     <b>yuseyyirukum</b> ⇒ <a href="https://corpuscoranicum.org/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yenşurukum</a> 
     <img src="img/Yunus 22.png">
-    Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. 
+    Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. 
 </p>
 
 <h3 id="kaynak">Kaynaklar</h3>
