--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -62,7 +62,7 @@ erken dönem mushaflar hakkında bilgi verirken, Kur'ân-ı Kerim'in korunmuşlu
 <p>Yunus <a target=iqra href="/Kuran/reader.html#v=10:22&r=syr">10:22</a> &mdash;
   <b>yuseyyirukum</b> ⇒ <a href="https://corpuscoranicum.org/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yenşurukum</a> 
   <img src="img/Yunus 22.png">
-  Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. Tablodaki 44 ayet içinde kelime farkı olan tek yer bu, aşağıda sarı işaretli.
+  Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. Tablodaki 44 ayet içinde kelime farkı olan tek yer bu, aşağıda sarı işaretli.
 </p>
 
 <h3>Kayıtlı imlâ farklarının tamamı</h3>
