--- a/ders/index.html
+++ b/ders/index.html
@@ -27,8 +27,20 @@
 <h2>Iqra &ndash; Dersler &emsp;<button id=dersler>◀</button></h2>
 <script>
   dersler.onclick = () => {location.pathname = "/Kitap/"}
+  window.name = "finder"
 </script>
 
+<div class=narrow>
+<h3>Benzerlik</h3>
+<p>Benzeşen ayetlere örnekler</p>
+<ul>
+  <li><a href="../simi/2020.html" target=KK>Benzerlik 2020 (ilk)</a>
+  <li><a href="../simi/2021.html">Benzerlik 2021 (V4.2)</a>
+  <li><a href="../KK/korunmus.html" target=KK>Korunmuşluk 2022</a>
+  <li><a href="benzer.html">Benzerlik öbekleri</a>
+  <li><a href="../simi/2025.html" target=KK>Kıraat ve Benzerlik</a>
+</ul>
+</div>
 <div class=narrow>
 <h3>Kur'an Kelimeleri</h3>
 <p>Yüce Kitabımızda kelime analizleri</p>
@@ -38,13 +50,8 @@
   <li><a href="yaygin.html">Sık geçen kelimeler</a>
   <li><a href="isimler.html">Özel isimler</a>
   <li><a href="huruf.html">Şifreli harfler</a>
-  <li><a href="sunum4.2.html">Benzerlik V4.2</a>
-  <li><a href="/Kuran/benzerlik.html" target=Kuran>Benzerlik örnekleri</a>
-  <li><a href="/Kitap/KK/korunmus.html" target=Kuran>Korunmuşluk örnekleri</a>
-  <li><a href="benzer.html">Benzerlik öbekleri</a>
 </ul>
 </div>
-<div class=gap> </div>
 <div class=narrow>
 <h3>Arapça Dersler</h3>
 <p>Kuran’dan alınmış örneklerle Arapça</p>
